--- a/Frontend/src/Components/Header/Header.css
+++ b/Frontend/src/Components/Header/Header.css
@@ -15,7 +15,29 @@
     padding-right: 30px;
     font-size: 15px;
     position: relative;
+    height: 35px;
+}
+
+.header-logo{
+    display: flex;
+    align-items: center;
+}
+
+.header-logo img{
+    width: 60px;
+    height: 50px;
+    margin-top: 20px;
+}
+
+.header-logo p{
+    padding-left: 10px;
+}
+
+.header-social-icons{
+    display: flex;
+    width: 30px;
     height: 30px;
+    gap: 7px;
 }
 
 .header-top a{
@@ -49,7 +71,7 @@ nav a{
     color: black;
 }
 
-.menu li select {
+.header-menu li select {
     outline: none;
 }
 
@@ -63,11 +85,101 @@ nav a{
     background-size: cover;
 }
 
-/* .hero-img img{
-
-} */
 
 .active{
     cursor: pointer;
     color: green;
+}
+
+
+@media(max-width: 1024px){
+    .header-top {
+        font-size: 14px;
+    }
+    .header-logo img{
+        width: 50px;
+        height: 40px;
+    }
+    .header-logo p{
+        font-size: 13px;
+        padding-top: 5px;
+    }
+    .header-menu ul{
+        font-size: 15px;
+    }
+    .header-social-icons{
+        width: 20px;
+        height: 20px;
+    }
+
+    .header-top button{
+        width: 60px;
+        height: 22px;
+    }
+}
+
+@media(max-width: 800px){
+    .header-top{
+        padding: 0px 20px;
+    }
+    .header-top {
+        font-size: 13px;
+    }
+    .header-logo img{
+        width: 40px;
+        height: 30px;
+        margin-top: 9px;
+    }
+    .header-logo p{
+        font-size: 12px;
+        padding-top: 0px;
+    }
+    .header nav{
+        padding-left: 0%;
+    }
+    .header-top p{
+        margin-left: -14px;
+    }
+    .header-social-icons{
+        margin-left: -25px;
+    }
+    .header-top button{
+        width: 45px;
+        height: 22px;
+    }
+}
+
+@media(max-width: 500px){
+    .header-logo p{
+        display: none;
+    }
+    .header-top {
+        font-size: 12px;
+    }
+    .header-logo img{
+        width: 60px;
+        height: 45px;
+        margin-top: 17px;
+    }
+    .header-top p{
+        margin-left: -40px;
+    }
+    .header nav{
+        padding-left: 0%;
+    }
+    .header ul{
+        font-size: 12px;
+    }
+    .header-social-icons{
+        width: 15px;
+        height: 15px;
+        margin-left: -40px;
+    }
+    .header-top button{
+        width: 44px;
+        height: 22px;
+    }
+    .hero-img img{
+        height: 300px;
+    }
 }
